css overflow wrangling per issue #10; I feel like this might be the thing but I am not sure how/what to do...

--- a/css/mapzen.whosonfirst.api.explorer.print.css
+++ b/css/mapzen.whosonfirst.api.explorer.print.css
@@ -12,7 +12,9 @@
 	position: auto !important;
 	top: 0 !important;
 	left: 0 !important;
-	width: 100%;
+	width: 100% !important;
+	height: 100% !important;
+	overflow: inherit !important;	
     }
 
     .modify-me {
